--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/we/"
 excerpt: >
-  Modelika is Budapest based company that provides 3D printing services, 3D model design and expert support for creating plastic models.<br>
-
-  Each project is checked precisely, made quickly, efficiently, at a competitive price. <br>
-
-  We implement as small series as experimental, unusual orders, mechanical models, artistic projects.<br>
+  Artomatica shapes the future by researching and developing effective solutions to everyday problems.<br>
   <br />     
 ---
 
