--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/we/"
 excerpt: >
-  Artomatica shapes the future by researching and developing effective solutions to everyday problems.<br>
+  We shape the future by researching and developing clever solutions to everyday problems.<br>
   <br />     
 ---
 
