--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: splash
 permalink: /
 header:
-  overlay_color: "##000000"
+  overlay_color: "##fff"
   overlay_image: /assets/images/cover-photo.jpg
   actions:
     - label: "<i class='fas fa-envelope'></i> Contact"
