added black highlight to make tex tmore readable

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/we/"
 excerpt: >
-  <span style="color:black">We shape the future by researching and developing clever solutions to everyday problems.</span><br>
+  <span style="background-color: #000">We shape the future by researching and developing clever solutions to everyday problems.</span><br>
   <br />     
 ---
 
