--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ header:
     - label: "<i class='fas fa-envelope'></i> Contact"
       url: "/contact/"
     - label: "<i class='fas fa-address-card'></i> About"
-      url: "/we/"
+      url: "/about/"
 excerpt: >
   <span>We shape the future by researching and developing clever solutions to everyday problems.</span><br>
   <br />     
