--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/about/"
 excerpt: >
-  <span>We shape the future by researching and developing clever solutions to everyday problems.</span><br>
+  <span>We empower the future by nvestigating, inventing and implementing clever technological solutions for better quality of life.</span><br>
   <br />     
 ---
 
