--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/about/"
 excerpt: >
-  <span>We empower the future by nvestigating, inventing and implementing clever technological solutions for better quality of life.</span><br>
+  <span>We empower the future by investigating, inventing and implementing</span><br></br>
+  <span>clever technological solutions for better quality of life</span><br>
   <br />     
 ---
 
