--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/about/"
 excerpt: >
-  <span>We empower the future by investigating, inventing and implementing</span><br></br>
-  <span>clever technological solutions for better quality of life</span><br>
-  <br />     
+  <span>We empower the future<br>
+  by investigating, inventing and implementing><br>
+  clever technological solutions<br> 
+  for better quality of life<br></span>
 ---
 
