--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ excerpt: >
   <span>We empower the future<br>
   by investigating, inventing and implementing><br>
   clever technological solutions<br> 
-  for better quality of life<br></span>
-  <br />
+  for better quality of life.<br></span>
 ---
 
