--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/about/"
 excerpt: >
-  <span>We empower the future<br>
-  by investigating, inventing and implementing><br>
-  clever technological solutions<br> 
-  for better quality of life.<br></span>
+  <span>We empower the future<br>by investigating, inventing and implementing><br>clever technological solutions<br>for better quality of life.<br></span>
 ---
 
