--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/about/"
 excerpt: >
-  <span>From prototype to product.<br>We empower the future by researching, inventing and implementing clever technology solutions for improved quality of life.</span>
+  <span>From prototype to product.<br>We empower the future by researching, inventing and implementing clever technological solutions for improved quality of life.</span>
 ---
 
