--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ header:
     - label: "<i class='fas fa-address-card'></i> About"
       url: "/about/"
 excerpt: >
-  <span>From prototype to product.<br>We empower the future of humanity, by researching, inventing and implementing clever technological solutions for improved life quality.</span>
+  <span>Product development from prototype to the market.<br>We research, invent and implementing clever technological solutions for improved life quality.</span>
 ---
 
